--- a/photo.html
+++ b/photo.html
@@ -80,7 +80,7 @@
           <footer class="user-post__footer">
             <div class="user-post__vote">
               <button class="user-post__vote-btn">Нравится</button>
-              <span class="user-post__count-btn">Нравится: 334</span>
+              <span class="user-post__vote-count">Нравится: 334</span>
             </div>
           </footer>
 
@@ -107,7 +107,7 @@
           <footer class="user-post__footer">
             <div class="user-post__vote">
               <button class="user-post__vote-btn">Нравится</button>
-              <span class="user-post__count-btn">Нравится: 356</span>
+              <span class="user-post__vote-count">Нравится: 356</span>
             </div>
           </footer>
 
@@ -134,7 +134,7 @@
           <footer class="user-post__footer">
             <div class="user-post__vote">
               <button class="user-post__vote-btn">Нравится</button>
-              <span class="user-post__count-btn">Нравится: 666</span>
+              <span class="user-post__vote-count">Нравится: 666</span>
             </div>
           </footer>
 
@@ -161,7 +161,7 @@
           <footer class="user-post__footer">
             <div class="user-post__vote">
               <button class="user-post__vote-btn">Нравится</button>
-              <span class="user-post__count-btn">Нравится: 215</span>
+              <span class="user-post__vote-count">Нравится: 215</span>
             </div>
           </footer>
 
@@ -188,7 +188,7 @@
           <footer class="user-post__footer">
             <div class="user-post__vote">
               <button class="user-post__vote-btn">Нравится</button>
-              <span class="user-post__count-btn">Нравится: 4</span>
+              <span class="user-post__vote-count">Нравится: 4</span>
             </div>
           </footer>
 
@@ -215,7 +215,7 @@
           <footer class="user-post__footer">
             <div class="user-post__vote">
               <button class="user-post__vote-btn">Нравится</button>
-              <span class="user-post__count-btn">Нравится: 150</span>
+              <span class="user-post__vote-count">Нравится: 150</span>
             </div>
           </footer>
 
