--- a/index.html
+++ b/index.html
@@ -13,38 +13,37 @@
 
     <nav class="main-menu">
 
-      <div class="main-menu__top">
-        <div class="main-menu__top-inner">
+        <div class="main-menu__inner">
+          <div class="main-menu__top">
 
-          <h1 class="main-menu__logo">
+            <h1 class="main-menu__logo">
             <a class="logo-plain"  href="#">
               PINK
             </a>
           </h1>
 
-          <div class="main-menu__btn-wrapper">
-            <button class="main-menu__btn">
-            </button>
+            <div class="main-menu__btn-wrapper">
+              <button class="main-menu__btn">
+              </button>
+            </div>
+
           </div>
 
+        <ul class="main-menu__items">
+          <li class="main-menu__item">
+            <a>Главная</a>
+          </li>
+          <li class="main-menu__item">
+            <a href="photo.html">Фотографии</a>
+          </li>
+          <li class="main-menu__item">
+            <a href="form.html">Конкурс</a>
+          </li>
+          <li class="main-menu__item">
+            <a href="https://htmlacademy.ru/">Htmlacademy</a>
+          </li>
+        </ul>
         </div>
-      </div>
-
-      <ul class="main-menu__items">
-        <li class="main-menu__item">
-          <a>Главная</a>
-        </li>
-        <li class="main-menu__item">
-          <a href="photo.html">Фотографии</a>
-        </li>
-        <li class="main-menu__item">
-          <a href="form.html">Конкурс</a>
-        </li>
-        <li class="main-menu__item">
-          <a href="https://htmlacademy.ru/">Htmlacademy</a>
-        </li>
-      </ul>
-
 
     </nav>
 
