--- a/form.html
+++ b/form.html
@@ -11,10 +11,10 @@
 
   <header class="page-header">
 
-    <nav class="main-menu main-menu--closed">
+    <nav class="main-menu">
 
-      <div class="main-menu__top">
-        <div class="main-menu__top-inner">
+      <div class="main-menu__inner">
+        <div class="main-menu__top">
 
           <h1 class="main-menu__logo">
             <a class="logo-plain"  href="#">
@@ -28,22 +28,22 @@
           </div>
 
         </div>
-      </div>
 
-      <ul class="main-menu__items">
-        <li class="main-menu__item">
-          <a href="index.html">Главная</a>
-        </li>
-        <li class="main-menu__item">
-          <a href="photo.html">Фотографии</a>
-        </li>
-        <li class="main-menu__item">
-          <a>Конкурс</a>
-        </li>
-        <li class="main-menu__item">
-          <a href="https://htmlacademy.ru/">Htmlacademy</a>
-        </li>
-      </ul>
+        <ul class="main-menu__items">
+          <li class="main-menu__item">
+            <a href="index.html">Главная</a>
+          </li>
+          <li class="main-menu__item">
+            <a href="photo.html">Фотографии</a>
+          </li>
+          <li class="main-menu__item">
+            <a>Конкурс</a>
+          </li>
+          <li class="main-menu__item">
+            <a href="https://htmlacademy.ru/">Htmlacademy</a>
+          </li>
+        </ul>
+      </div>
 
     </nav>
 
@@ -190,51 +190,55 @@
 
     <div class="contest-popup">
 
-        <h3 class="contest-popup__title">Ваша заявка отправлена</h3>
+      <h3 class="contest-popup__title">Ваша заявка отправлена</h3>
 
-        <div class="contest-popup__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</div>
+      <div class="contest-popup__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</div>
 
-        <div class="contest-popup__footer">
-          <button class="contest-popup__btn">Закрыть окно</button>
-        </div>
+      <div class="contest-popup__footer">
+        <button class="contest-popup__btn">Закрыть окно</button>
+      </div>
 
     </div>
 
 
     <div class="contest-popup">
 
-        <h3 class="contest-popup__title">Что-то пошло не так!</h3>
+      <h3 class="contest-popup__title">Что-то пошло не так!</h3>
 
-        <div class="contest-popup__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</div>
+      <div class="contest-popup__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</div>
 
-        <button class="contest-popup__btn">OK</button>
+      <button class="contest-popup__btn">OK</button>
 
-      </div>
+    </div>
 
   </main>
 
 
   <footer class="page-footer">
 
-    <a class="page-footer__logo logo-pict" href="index.html">PINK</a>
+    <div class="page-footer__bottom">
 
-    <ul class="page-footer__socials socials">
-      <li class="socials__item socials__item--twitter">
-        <a href="https://twitter.com/"><span>Twitter</span></a>
-      </li>
-      <li class="socials__item socials__item--youtube">
-        <a href="https://www.youtube.com"><span>Youtube</span></a>
-      </li>
-      <li class="socials__item socials__item--facebook">
-        <a href="http://www.facebook.com/"><span>Facebook</span></a>
-      </li>
-    </ul>
+      <a class="page-footer__logo logo-pict" href="index.html">PINK</a>
 
-    <div class="page-footer__credentials">
-      <span class="page-footer__credentials-text">Разработано</span>
-      <a class="page-footer__credentials-logo" href="https://htmlacademy.ru/">
-        <img src="http://placehold.it/27x34" width="27" height="34" alt="Htmlacademy">
-      </a>
+      <ul class="page-footer__socials socials">
+        <li class="socials__item socials__item--twitter">
+          <a href="https://twitter.com/"><span>Twitter</span></a>
+        </li>
+        <li class="socials__item socials__item--youtube">
+          <a href="https://www.youtube.com"><span>Youtube</span></a>
+        </li>
+        <li class="socials__item socials__item--facebook">
+          <a href="http://www.facebook.com/"><span>Facebook</span></a>
+        </li>
+      </ul>
+
+      <div class="page-footer__credentials">
+        <span class="page-footer__credentials-text">Разработано</span>
+        <a class="page-footer__credentials-logo" href="https://htmlacademy.ru/">
+          <img src="http://placehold.it/27x34" width="27" height="34" alt="Htmlacademy">
+        </a>
+      </div>
+
     </div>
 
   </footer>
