--- a/photo.html
+++ b/photo.html
@@ -13,8 +13,8 @@
 
     <nav class="main-menu">
 
-      <div class="main-menu__top">
-        <div class="main-menu__top-inner">
+      <div class="main-menu__inner">
+        <div class="main-menu__top">
 
           <h1 class="main-menu__logo">
             <a class="logo-plain"  href="#">
@@ -28,22 +28,22 @@
           </div>
 
         </div>
-      </div>
 
-      <ul class="main-menu__items">
-        <li class="main-menu__item">
-          <a href="index.html">Главная</a>
-        </li>
-        <li class="main-menu__item">
-          <a>Фотографии</a>
-        </li>
-        <li class="main-menu__item">
-          <a href="form.html">Конкурс</a>
-        </li>
-        <li class="main-menu__item">
-          <a href="https://htmlacademy.ru/">Htmlacademy</a>
-        </li>
-      </ul>
+        <ul class="main-menu__items">
+          <li class="main-menu__item">
+            <a href="index.html">Главная</a>
+          </li>
+          <li class="main-menu__item">
+            <a>Фотографии</a>
+          </li>
+          <li class="main-menu__item">
+            <a href="form.html">Конкурс</a>
+          </li>
+          <li class="main-menu__item">
+            <a href="https://htmlacademy.ru/">Htmlacademy</a>
+          </li>
+        </ul>
+      </div>
 
     </nav>
 
@@ -260,25 +260,29 @@
 
   <footer class="page-footer">
 
-    <a class="page-footer__logo logo-pict" href="index.html">PINK</a>
+    <div class="page-footer__bottom">
 
-    <ul class="page-footer__socials socials">
-      <li class="socials__item socials__item--twitter">
-        <a href="https://twitter.com/"><span>Twitter</span></a>
-      </li>
-      <li class="socials__item socials__item--youtube">
-        <a href="https://www.youtube.com"><span>Youtube</span></a>
-      </li>
-      <li class="socials__item socials__item--facebook">
-        <a href="http://www.facebook.com/"><span>Facebook</span></a>
-      </li>
-    </ul>
+      <a class="page-footer__logo logo-pict" href="index.html">PINK</a>
 
-    <div class="page-footer__credentials">
-      <span class="page-footer__credentials-text">Разработано</span>
-      <a class="page-footer__credentials-logo" href="https://htmlacademy.ru/">
-        <img src="http://placehold.it/27x34" width="27" height="34" alt="Htmlacademy">
-      </a>
+      <ul class="page-footer__socials socials">
+        <li class="socials__item socials__item--twitter">
+          <a href="https://twitter.com/"><span>Twitter</span></a>
+        </li>
+        <li class="socials__item socials__item--youtube">
+          <a href="https://www.youtube.com"><span>Youtube</span></a>
+        </li>
+        <li class="socials__item socials__item--facebook">
+          <a href="http://www.facebook.com/"><span>Facebook</span></a>
+        </li>
+      </ul>
+
+      <div class="page-footer__credentials">
+        <span class="page-footer__credentials-text">Разработано</span>
+        <a class="page-footer__credentials-logo" href="https://htmlacademy.ru/">
+          <img src="http://placehold.it/27x34" width="27" height="34" alt="Htmlacademy">
+        </a>
+      </div>
+
     </div>
 
   </footer>
